--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "next dev",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -D build",
     "build": "next build",
     "export": "next export"
   },
